--- a/homepage/index.html
+++ b/homepage/index.html
@@ -77,7 +77,7 @@
                         By bringing together all types of information about species 
                         distributions, providing model-based integration,
                         and providing a system for users build upon our knowledge, 
-                        the Map of Life project hopes support our community in 
+                        the Map of Life project hopes to support our community in 
                         understanding and saving the world's biodiversity.
                         <span class="aboutLink"><a href="/about.html">more about MOL</a></span>
                     </div>
@@ -119,7 +119,7 @@
                                 <div class="description">
                                     For those of you in the code-development community, 
                                     MOL is a fully open-source project. Feel free to watch 
-                                    and discus our progress.
+                                    and discuss our progress.
                                 </div>
                             </div>
                             <div id="code"></div>
