--- a/homepage/index.html
+++ b/homepage/index.html
@@ -146,7 +146,7 @@
                 <a href="/">Home</a>
                 <a href="/about.html">About</a>
                 <a href="http://mappinglife.wordpress.com/">Blog</a>
-                <a href="http://http://www.yale.edu/jetz/">Jetz Lab</a>
+                <a href="http://www.yale.edu/jetz/">Jetz Lab</a>
                 <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a>
                 <a href="http://github.com/andrewxhill/MOL">GitHub</a>
             </div> 
