--- a/app/static/search.html
+++ b/app/static/search.html
@@ -37,16 +37,19 @@
             <div class="option"><a href="/static/dead_link.html">Puma concolor</a></div>
             <div class="option"><a href="/static/dead_link.html">Puma yagouaroundi</a></div>
             <div class="option"><a href="/static/dead_link.html">Smilisca puma</a></div>
+            <div class="option"><a class="selected" href="/static/dead_link.html">All Names</a></div>
         </div>
         <div class="filter widgetTheme">
             <div class="filterName">Types</div>
             <div class="option"><a href="/static/dead_link.html">Ranges</a></div>
             <div class="option"><a href="/static/dead_link.html">Points</a></div>
+            <div class="option"><a class="selected" href="/static/dead_link.html">All Types</a></div>
         </div>
         <div class="filter widgetTheme">
             <div class="filterName">Sources</div>
             <div class="option"><a href="/static/dead_link.html">GBIF</a></div>
             <div class="option"><a href="/static/dead_link.html">MOL</a></div>
+            <div class="option"><a class="selected" href="/static/dead_link.html">All Sources</a></div>
         </div>
       </div>
       <ol class="searchResults widgetTheme">
