--- a/app/html/map.html
+++ b/app/html/map.html
@@ -12,7 +12,7 @@
     <script src="../../../js/lib/underscore-min.js"></script>    
     <script src="../../../js/lib/backbone-min.js"></script> 
     <script src="../../../js/lib/class.js"></script>
-    <script src="../../../js/mol.js"></script>
+    <script src="../../../js/mol.js?1"></script>
 
     <meta charset="utf-8" /> 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
@@ -26,7 +26,7 @@
   </head>
   <body>
 	<script type="text/javascript">
-        $(document).ready(function() {   
+        $(document).ready(function() {
             MOL.src.load();
             <!-- MOL(function(env) { -->
             <!--    var app = new env.app.Instance({logging: true}); -->
