flushed out homepage websites+text a bit

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -6,42 +6,7 @@
         <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" /> 
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Coda">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
-        <script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAAhejF1IRVaCyeCqxIQjT19BT2yXp_ZAY8_ufC3CFXhHIE1NvwkxQQVdp0qK6LIdtUMkyJyGau2FAr6Q"></script> 
-        <script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAAhejF1IRVaCyeCqxIQjT19BQnqYmZFNw176Z9eGZLF4M7kSq-MhQPJ1PZw_xe7fLxFc65vo_OiMHM5A"></script> 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script> 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
-        <script src="/javascript/gfeed.js" type="text/javascript"></script> 
-        <script src="/javascript/gritter.min.js" type="text/javascript"></script> 
         <script type="text/javascript">
-            $(document).ready(function() { 
-                $('#techLink').mouseenter(function(){
-                    var eleph = new Image();
-                    eleph.src="/images/tech.gif?n="+Math.random();
-                    eleph.onload = function(){
-                        $('.topBackground').html(eleph);
-                    }
-                });
-                $('#techLink').mouseleave(function(){
-                    setTimeout(function(){
-                        var eleph = new Image();
-                        eleph.src="/images/tech-reverse.gif?n="+Math.random();
-                        eleph.onload = function(){
-                            $('.topBackground').html(eleph);
-                        }
-                    },1000);
-                });
-                
-                $('#blog').gFeed({ 
-                    url: 'http://mappinglife.wordpress.com/feed/',
-                    tabs: false,
-                    max: 3
-                }); 
-                $('#code').gFeed({ 
-                    url: 'https://github.com/andrewxhill/MOL/commits/master.atom',
-                    tabs: false,
-                    max: 6
-                }); 
-            });
         </script>
     </head>
     <body>
@@ -56,14 +21,60 @@
             </div>
         </div>
             <div id="container">
-                <div id="top">
-                    <div class="topQuote"> 
-                        Here we'll have our about page. Rob has some good text that I'll wrap into here next.
-                    </div>
-                </div>
-                <div id="middle">
-                </div>
                 <div id="content">
+                    <div class="wrapper">
+                        <div class="vision">
+                            VISION:  The geography of life on Earth lies at the heart of the
+                            interaction between nature and human society with its need for natural
+                            resources. As disasters such as hurricanes or oil spills strike or the
+                            climate changes, knowledge about the geography of biological diversity
+                            – the types of species inhabiting a certain area – is essential for
+                            informed and targeted action. Geographic data on species’
+                            distributions are critical for governments, agencies and companies
+                            seeking to make sound decisions about land management, health and
+                            climate change policies or species conservation. Geographic range maps
+                            are displayed in nature programs, zoos, and field guides to the
+                            broader public worldwide and have myriad uses from basic science to
+                            resource management, development and education.  Yet to date the
+                            availability and quality of species range maps remains shockingly
+                            dispersed and limited – in stark contrast with meter-level resolution
+                            remotely sensed environmental information which is accessible
+                            globally.  The time is now right to mobilize and, most importantly,
+                            integrate species distribution information at global scale for
+                            scientists and the public. The proposed “Map of Life” project will
+                            host all available types of information about species distributions,
+                            provide model-based integration, quantify uncertainty in individual
+                            and integrated data types, and implement user feedback.
+                        </div>
+                        <div class="friends">
+                            MOL Community: A large part of the project is going to be building upon, 
+                            enhancing, and collaborating with other informatics projects. Being so 
+                            early, MOL is greatful for such a diverse and motivated community. Here 
+                            are links to some of the projects we visit the most: 
+                            <div class="links">
+                                <a href="http://gbif.org">Global Biodiversity Information Facility</a>
+                                <a href="http://eol.org">Encyclopedia of Life</a>
+                                <a href="http://catalogueoflife.org">Catalogue of Life</a>
+                                <a href="http://iucn.org">International Union for Conservation of Nature</a>
+                                <a href="http://protectedplanet.net">Protected Planet</a>
+                            </div>
+                        </div>
+                        <div class="products">
+                            MOL Products: MOL will mobilize and integrate all key information
+                            about species’ ranges that is currently spread over different research
+                            domains: expert opinion maps, surveys over defined extents, point
+                            observations (e.g. aggregated by GBIF) and voucher specimens, expert
+                            habitat preferences, and others.  Combined with high resolution
+                            (30-100m) remotely sensed data, a full statistical model-based
+                            integration will be performed that allows for different data types to
+                            complement each other.   The end result will be a knowledge-base of
+                            initially tens and ultimately hundreds of thousands of species
+                            distribution maps, along with a set of tools for querying, accessing,
+                            modifying, downloading and summarizing them. Maps will be easily
+                            re-provisioned in other applications such as Encyclopedia of Life
+                            (eol.org).
+                        </div>
+                    </div>
                 </div>
             </div>
         <div id="footer"> 
@@ -71,7 +82,7 @@
                 <a href="/">Home</a>
                 <a href="/about.html">About</a>
                 <a href="http://mappinglife.wordpress.com/">Blog</a>
-                <a href="http://http://www.yale.edu/jetz/">Jetz Lab</a>
+                <a href="http://www.yale.edu/jetz/">Jetz Lab</a>
                 <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a>
                 <a href="http://github.com/andrewxhill/MOL">GitHub</a>
             </div> 
