Removed https from http://aaron.io

--- a/homepage/people.html
+++ b/homepage/people.html
@@ -84,7 +84,7 @@
                                 enjoys reading self-introductions written in the third person.
                             </div>
                             <div class="links">
-                                <a href="https://aaron.io">Aaron's Homepage</a>
+                                <a href="http://aaron.io">Aaron's Homepage</a>
                             </div>
                         </div>
                         <div class="person">
